<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        style="@style/HeightWrapContentTheme">
    
    <LinearLayout
            style="@style/HeightWrapContentTheme"
            android:layout_height="@dimen/bottom_sheet_header_height_without_line"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingHorizontal="@dimen/horizontal_padding">
        
        <com.example.howlong.widgets.LightFontTextView
                android:id="@+id/common_result_placeholder"
                style="@style/PrimaryBlueTextViewStyle"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/vertical_spacing"
                tools:text="@string/flaw" />
        
        <com.example.howlong.widgets.RegularFontTextView
                android:id="@+id/common_result"
                style="@style/PrimaryBlueTextViewStyle"
                android:layout_gravity="center_vertical"
                tools:text="05:00" />
    
    </LinearLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/HeightWrapContentTheme"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="@dimen/bottom_sheet_row_height"
            android:layout_marginTop="@dimen/vertical_spacing">
    
        <com.example.howlong.widgets.RegularFontTextView
                style="@style/DescriptionTextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/grouping"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        
        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/grouping_type"
                android:layout_width="wrap_content"
                tools:background="@color/colorGray"
                android:layout_height="wrap_content"
                android:entries="@array/grouping_types"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <RadioGroup
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:id="@+id/grouping_ability"
            style="@style/HeightWrapContentTheme"
            android:layout_marginBottom="@dimen/blocks_vertical_spacing"
            android:orientation="horizontal">
        
        <RadioButton
                android:id="@+id/grouping_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
        
        <RadioButton
                android:id="@+id/grouping_disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/vertical_spacing"
                android:text="@string/disabled"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
    
    </RadioGroup>
    
    <View style="@style/HorizontalDividerStyle"/>
    
    <com.example.howlong.widgets.RegularFontTextView
            style="@style/DescriptionTextViewStyle"
            android:layout_height="@dimen/bottom_sheet_row_height"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:text="@string/statistics" />
    
    <View style="@style/HorizontalDividerStyle" />
    
</LinearLayout>